# djtest

./: .gitignore  dump.rdb  pyproject.toml
backend/: db.sqlite3
backend/backend/: firebase.py  redis.py  settings.py  urls.py  views.py
templates/: index.html
templates/registration/: login.html
